Added contacts and testimonials

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 Monday – Saturday: 10:00 AM – 6:00 PM<br>
                 Sunday: 10:00 AM – 5:00 PM</p>
                 <p class="lead font-weight-normal"><strong>Email:</strong>
-                    <a href="mailto:info@secondhandwonderland.ca" class="nav-link text-primary">info@secondhandwonderland.ca</a><br>
+                    <a href="mailto:info@secondhandwonderland.ca" class="nav-link text-primary">info@secondhandwonderland.ca</a>
                     <strong>Call:</strong>
-                    <a href="tel:306-545-7495" class="nav-link text-primary">306-545-7495</a><br>
+                    <a href="tel:306-545-7495" class="nav-link text-primary">306-545-7495</a>
                     <strong>Text:</strong>
                     <a href="sms:306-510-2777"  class="nav-link text-primary">306-510-2777</a>
                 </p>
@@ -84,26 +84,31 @@
 
     <div class="container marketing my-5">
 
-        
+        <h2 class="featurette-heading fw-normal lh-1 pb-3">TESTAMONIALS</h2>
         <div class="row">
         <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-            <h2 class="fw-normal">Heading</h2>
-            <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-            <p><a class="btn btn-secondary" href="#">View details »</a></p>
+            <img class="pb-1 rounded-circle" src="media/mike-jones.png" alt="Profile Photo">
+            <h2 class="fw-normal">Mike Jones</h2>
+            <img class="pb-1" src="media/—Pngtree—5 star rating golden design_14236156.png" alt="5 star raiting">
+            <p>Great new store! Love the tools, electronics,  and vinyls! The staff are very helpful and knowledgeable. Try to make this your go to shop! It appears that most of their pricing is 50% off of brand new, or cheaper!</p>
+            <p><a class="btn btn-secondary" href="https://g.co/kgs/b7JP5KQ">View details »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-            <h2 class="fw-normal">Heading</h2>
-            <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-            <p><a class="btn btn-secondary" href="#">View details »</a></p>
+            <img class="pb-1 rounded-circle" src="media/ben-lit.png" alt="Profile Photo">
+            <h2 class="fw-normal">Benjamin Litzenberger</h2>
+            <img class="pb-1" src="media/—Pngtree—5 star rating golden design_14236156.png" alt="5 star raiting">
+            <p>Great store! Great staff! I've been to the other Regina second hand stores, and this is by far the nicest and most welcoming! Always a fun selection of all kinds of things for collectors, gamers, and hobbyists! They even have new products! Need a charge cord? They have them. Adaptor for your newer phone to AUX? They have those too. Even speaker wire. You won't be disappointed. Check them out as often as you can, because new products come out every day!!
+            </p>
+            <p><a class="btn btn-secondary" href="https://g.co/kgs/b7JP5KQ">View details »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-            <h2 class="fw-normal">Heading</h2>
-            <p>And lastly this, the third column of representative placeholder content.</p>
-            <p><a class="btn btn-secondary" href="#">View details »</a></p>
+            <img class="pb-1 rounded-circle" src="media/sweet-harmony.png" alt="Profile Photo">
+            <h2 class="fw-normal">Sweet Harmony</h2>
+            <img class="pb-1" src="media/—Pngtree—5 star rating golden design_14236156.png" alt="5 star raiting">
+            <p>Friendly & helpful staff.  We were very impressed with how well everything is kept clean.  This is definitely the place to go for retro games in Regina.</p>
+            <p><a class="btn btn-secondary" href="https://g.co/kgs/VVp2dYV">View details »</a></p>
         </div><!-- /.col-lg-4 -->
+        
         </div><!-- /.row -->
 
 
@@ -118,6 +123,7 @@
             <p class="lead">Whether you're a first-time seller or a returning guest, selling your items can sometimes seem scary.
                 Please view the steps to take in order to have a quick and easy sale!
             </p>
+            <p><a class="btn btn-secondary" href="#">View details »</a></p>
         </div>
         <div class="col-md-5">
             <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
@@ -135,6 +141,7 @@
             <h2 class="featurette-heading fw-normal lh-1">WHAT WE BUY</h2>
             <p class="lead">At Secondhand Wonderland we take a bunch of diffrent things, but sometimes its nice to knwo specifically what we are looking for and what we may not be looking for. Please view our list to find out!</p>
         </div>
+        <p><a class="btn btn-secondary" href="#">View details »</a></p>
         <div class="col-md-5 order-md-1">
             <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
         </div>
@@ -148,7 +155,7 @@
         <div class="row featurette">
         <div class="col-md-7">
             <h2 class="featurette-heading fw-normal lh-1">WARRENTY</h2>
-            <p class="lead">When buying an item it is natural to want a warrenty, especially when those items are second hand. At Secondhand Wonderland We offer a <br><strong>60-day warranty on all electronics</strong> <br>and a <br><strong>1-week warranty on all other items.</strong><br> This is to give guests peace of mind when shopping with us!</p>
+            <p class="lead">When buying an item it is natural to want a warrenty, especially when those items are second hand. At Secondhand Wonderland We offer a <br><strong>60-day warranty on all electronics</strong> <br>and a <br><strong>1-week warranty on all other items.</strong>
         </div>
         <div class="col-md-5">
             <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
@@ -248,7 +255,7 @@
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
             <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
         </a>
-        <span class="mb-3 mb-md-0 text-body-secondary">© 2024 Company, Inc</span>
+        <span class="mb-3 mb-md-0 text-body-secondary">©2024 Secondhand Wonderland Purveyors of Quality Used Goods.</span>
         </div>
 
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
