--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="mx-5">
- <div class="wrapper">
+ <div class="container">
+    <div class="container2">
         <!-- HEADER -->
         <div class="container">
-            <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
-                <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" style="margin-right: 5vw;">
-                    <img src="media/shwl-logo.png" alt="Your Logo" height="100vw" class="me-2">
+            <header class="d-flex flex-wrap justify-content-between py-3 mb-4 align-items-center">
+                <!-- Logo on the left -->
+                <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                    <img src="media/shwl-logo.png" alt="Your Logo" height="120vw" class="me-2">
                 </a>
             
-                <ul class="nav nav-pills mt-5">
+                <!-- Navigation links on the right -->
+                <ul class="nav nav-pills mt-5 mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                     <li class="nav-item"><a href="#" class="nav-link active bg-primary" aria-current="page">Home</a></li>
                     <li class="nav-item"><a href="#" class="nav-link text-primary">Before You Sell</a></li>
                     <li class="nav-item"><a href="#" class="nav-link text-primary">What We Buy</a></li>
@@ -140,8 +143,9 @@
         <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading fw-normal lh-1">WHAT WE BUY</h2>
             <p class="lead">At Secondhand Wonderland we take a bunch of diffrent things, but sometimes its nice to knwo specifically what we are looking for and what we may not be looking for. Please view our list to find out!</p>
+            <p><a class="btn btn-secondary" href="#">View details »</a></p>
         </div>
-        <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        
         <div class="col-md-5 order-md-1">
             <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
         </div>
@@ -282,6 +286,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <!-- Your custom script -->
         <script src="script.js"></script>
+    </div>
 </div>
 </body>
 </html>
