Added in functional links and set up other pages

--- a/faq.html
+++ b/faq.html
@@ -26,9 +26,9 @@
                 <!-- Navigation links on the right -->
                 <ul class="nav nav-pills mt-5 mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                     <li class="nav-item"><a href="/index.html" class="nav-link bg-primary">Home</a></li>
-                    <li class="nav-item"><a href="/how-to-sell.html" class="nav-link active text-primary" aria-current="page">Before You Sell</a></li>
+                    <li class="nav-item"><a href="/how-to-sell.html" class="nav-link text-primary">Before You Sell</a></li>
                     <li class="nav-item"><a href="/what-we-buy.html" class="nav-link text-primary">What We Buy</a></li>
-                    <li class="nav-item"><a href="/faq.html" class="nav-link text-primary">FAQs</a></li>
+                    <li class="nav-item"><a href="/faq.html" class="nav-link active text-primary" aria-current="page">FAQs</a></li>
                     <li class="nav-item"><a href="/contact.html" class="nav-link text-primary">Contact</a></li>
                 </ul>
             </header>
@@ -45,7 +45,7 @@
 
 
 
-
+<!-- FILL WITH CONTENT -->
 
 
 
@@ -72,9 +72,9 @@
 
         <ul class="nav nav-pills mt-4 mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <li class="nav-item"><a href="/index.html" class="nav-link bg-primary">Home</a></li>
-            <li class="nav-item"><a href="/how-to-sell.html" class="nav-link active text-primary" aria-current="page">Before You Sell</a></li>
+            <li class="nav-item"><a href="/how-to-sell.html" class="nav-link text-primary">Before You Sell</a></li>
             <li class="nav-item"><a href="/what-we-buy.html" class="nav-link text-primary">What We Buy</a></li>
-            <li class="nav-item"><a href="/faq.html" class="nav-link text-primary">FAQs</a></li>
+            <li class="nav-item"><a href="/faq.html" class="nav-link active text-primary" aria-current="page">FAQs</a></li>
             <li class="nav-item"><a href="/contact.html" class="nav-link text-primary">Contact</a></li>
         </ul>
     </footer>
