--- a/what-we-buy.html
+++ b/what-we-buy.html
@@ -22,8 +22,8 @@
         
             <ul class="nav nav-pills mt-5">
                 <li class="nav-item"><a href="#" class="nav-link text-primary">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link active bg-primary" aria-current="page">Before You Sell</a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-primary">What We Buy</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-primary">Before You Sell</a></li>
+                <li class="nav-item"><a href="#" class="nav-link active bg-primary" aria-current="page">What We Buy</a></li>
                 <li class="nav-item"><a href="#" class="nav-link text-primary">FAQs</a></li>
                 <li class="nav-item"><a href="#" class="nav-link text-primary">Contact</a></li>
             </ul>
