Finished how-to-sell,. found issue with styling on other pages in links

--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secondhand Wonderland - Home</title>
+    <title>Secondhand Wonderland - FAQ</title>
     <link rel="icon" type="image/png" href="media/favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -25,10 +25,10 @@
             
                 <!-- Navigation links on the right -->
                 <ul class="nav nav-pills mt-5 mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                    <li class="nav-item"><a href="/index.html" class="nav-link bg-primary">Home</a></li>
+                    <li class="nav-item"><a href="/index.html" class="nav-link text-primary">Home</a></li>
                     <li class="nav-item"><a href="/how-to-sell.html" class="nav-link text-primary">Before You Sell</a></li>
                     <li class="nav-item"><a href="/what-we-buy.html" class="nav-link text-primary">What We Buy</a></li>
-                    <li class="nav-item"><a href="/faq.html" class="nav-link active text-primary" aria-current="page">FAQs</a></li>
+                    <li class="nav-item"><a href="/faq.html" class="nav-link active bg-primary" aria-current="page">FAQs</a></li>
                     <li class="nav-item"><a href="/contact.html" class="nav-link text-primary">Contact</a></li>
                 </ul>
             </header>
