added FAQ and Contact information.

--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,48 @@
 
 
 
+<div class="container contact-info">
+    <h1>Contact Information</h1>
 
-
-<!-- FILL WITH CONTENT -->
-
+    <div class="row mt-5">
+      <div class="col-md-6">
+        <h3>Location</h3>
+        <a class="text-primary" onclick="window.location.href='https://www.google.ca/maps/place/311+Albert+St,+Regina,+SK+S4R+2P6/@50.4733855,-104.6173989,130m/data=!3m1!1e3!4m5!3m4!1s0x531c1efa42af34ff:0x6f5e0a5a5f8fbe61!8m2!3d50.4737683!4d-104.6172931?hl=en&shorturl=1'">
+            <p>311 Albert St, Regina, Saskatchewan</p></a>
+      </div>
+      <div class="col-md-6">
+        <h3>Hours</h3>
+        <p>
+            Monday – Saturday: 10:00 AM – 6:00 PM<br>
+            Sunday: 10:00 AM – 5:00 PM</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Phone</h3>
+        <a href="tel:306-545-7495" class="nav-link text-primary">306-545-7495</a>
+      </div>
+      <div class="col-md-6">
+        <h3>Email</h3>
+        <a href="mailto:info@secondhandwonderland.ca" class="nav-link text-primary">info@secondhandwonderland.ca</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Text</h3>
+        <a href="sms:306-510-2777"  class="nav-link text-primary">306-510-2777</a>
+      </div>
+      <div class="col-md-6">
+        <h3>Social Media</h3>
+        <p>
+          <a class="text-primary" href="https://www.facebook.com/SecondhandWonderlandYQR/">Facebook</a><br>
+          <a class="text-primary" href="https://twitter.com/SHWLYQR">X</a><br>
+          <a class="text-primary" href="https://www.instagram.com/secondhandwonderlandYQR">Instagram</a><br>
+          <!-- Add other social media links here -->
+        </p>
+      </div>
+    </div>
+  </div>>
 
 
 
@@ -71,11 +109,11 @@
         </div>
 
         <ul class="nav nav-pills mt-4 mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <li class="nav-item"><a href="/index.html" class="nav-link bg-primary">Home</a></li>
+            <li class="nav-item"><a href="/index.html" class="nav-link text-primary">Home</a></li>
             <li class="nav-item"><a href="/how-to-sell.html" class="nav-link text-primary">Before You Sell</a></li>
             <li class="nav-item"><a href="/what-we-buy.html" class="nav-link text-primary">What We Buy</a></li>
             <li class="nav-item"><a href="/faq.html" class="nav-link text-primary">FAQs</a></li>
-            <li class="nav-item"><a href="/contact.html" class="nav-link active text-primary" aria-current="page">Contact</a></li>
+            <li class="nav-item"><a href="/contact.html" class="nav-link active bg-primary" aria-current="page">Contact</a></li>
         </ul>
     </footer>
 
