--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,11 @@
             
                 <!-- Navigation links on the right -->
                 <ul class="nav nav-pills mt-5 mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                    <li class="nav-item"><a href="/index.html" class="nav-link text-primary">Home</a></li>
-                    <li class="nav-item"><a href="/how-to-sell.html" class="nav-link text-primary">Before You Sell</a></li>
-                    <li class="nav-item"><a href="/what-we-buy.html" class="nav-link text-primary">What We Buy</a></li>
-                    <li class="nav-item"><a href="/faq.html" class="nav-link text-primary">FAQs</a></li>
-                    <li class="nav-item"><a href="/contact.html" class="nav-link active bg-primary" aria-current="page">Contact</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link text-primary">Home</a></li>
+                    <li class="nav-item"><a href="how-to-sell.html" class="nav-link text-primary">Before You Sell</a></li>
+                    <li class="nav-item"><a href="what-we-buy.html" class="nav-link text-primary">What We Buy</a></li>
+                    <li class="nav-item"><a href="faq.html" class="nav-link text-primary">FAQs</a></li>
+                    <li class="nav-item"><a href="contact.html" class="nav-link active bg-primary" aria-current="page">Contact</a></li>
                 </ul>
             </header>
             
@@ -109,11 +109,11 @@
         </div>
 
         <ul class="nav nav-pills mt-4 mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <li class="nav-item"><a href="/index.html" class="nav-link text-primary">Home</a></li>
-            <li class="nav-item"><a href="/how-to-sell.html" class="nav-link text-primary">Before You Sell</a></li>
-            <li class="nav-item"><a href="/what-we-buy.html" class="nav-link text-primary">What We Buy</a></li>
-            <li class="nav-item"><a href="/faq.html" class="nav-link text-primary">FAQs</a></li>
-            <li class="nav-item"><a href="/contact.html" class="nav-link active bg-primary" aria-current="page">Contact</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link text-primary">Home</a></li>
+            <li class="nav-item"><a href="how-to-sell.html" class="nav-link text-primary">Before You Sell</a></li>
+            <li class="nav-item"><a href="what-we-buy.html" class="nav-link text-primary">What We Buy</a></li>
+            <li class="nav-item"><a href="faq.html" class="nav-link text-primary">FAQs</a></li>
+            <li class="nav-item"><a href="contact.html" class="nav-link active bg-primary" aria-current="page">Contact</a></li>
         </ul>
     </footer>
 
