--- a/faq.html
+++ b/faq.html
@@ -19,17 +19,17 @@
         <div class="container">
             <header class="d-flex flex-wrap justify-content-between py-3 mb-4 align-items-center">
                 <!-- Logo on the left -->
-                <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                     <img src="media/shwl-logo.png" alt="Your Logo" height="120vw" class="me-2">
                 </a>
             
                 <!-- Navigation links on the right -->
                 <ul class="nav nav-pills mt-5 mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                    <li class="nav-item"><a href="/index.html" class="nav-link text-primary">Home</a></li>
-                    <li class="nav-item"><a href="/how-to-sell.html" class="nav-link text-primary">Before You Sell</a></li>
-                    <li class="nav-item"><a href="/what-we-buy.html" class="nav-link text-primary">What We Buy</a></li>
-                    <li class="nav-item"><a href="/faq.html" class="nav-link active bg-primary" aria-current="page">FAQs</a></li>
-                    <li class="nav-item"><a href="/contact.html" class="nav-link text-primary">Contact</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link text-primary">Home</a></li>
+                    <li class="nav-item"><a href="how-to-sell.html" class="nav-link text-primary">Before You Sell</a></li>
+                    <li class="nav-item"><a href="what-we-buy.html" class="nav-link text-primary">What We Buy</a></li>
+                    <li class="nav-item"><a href="faq.html" class="nav-link active bg-primary" aria-current="page">FAQs</a></li>
+                    <li class="nav-item"><a href="contact.html" class="nav-link text-primary">Contact</a></li>
                 </ul>
             </header>
             
@@ -106,7 +106,7 @@
                     <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                         <div class="card-body animate__animated animate__fadeIn">
                             <p>For all information on selling items, click below to view our selling requirements.</p>
-                            <p><a class="btn btn-secondary" href="/how-to-sell.html">View details »</a></p>
+                            <p><a class="btn btn-secondary" href="how-to-sell.html">View details »</a></p>
                         </div>
                     </div>
                 </div>
@@ -152,11 +152,11 @@
         </div>
 
         <ul class="nav nav-pills mt-4 mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <li class="nav-item"><a href="/index.html" class="nav-link text-primary">Home</a></li>
-            <li class="nav-item"><a href="/how-to-sell.html" class="nav-link text-primary">Before You Sell</a></li>
-            <li class="nav-item"><a href="/what-we-buy.html" class="nav-link text-primary">What We Buy</a></li>
-            <li class="nav-item"><a href="/faq.html" class="nav-link active bg-primary" aria-current="page">FAQs</a></li>
-            <li class="nav-item"><a href="/contact.html" class="nav-link text-primary">Contact</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link text-primary">Home</a></li>
+            <li class="nav-item"><a href="how-to-sell.html" class="nav-link text-primary">Before You Sell</a></li>
+            <li class="nav-item"><a href="what-we-buy.html" class="nav-link text-primary">What We Buy</a></li>
+            <li class="nav-item"><a href="faq.html" class="nav-link active bg-primary" aria-current="page">FAQs</a></li>
+            <li class="nav-item"><a href="contact.html" class="nav-link text-primary">Contact</a></li>
         </ul>
     </footer>
 
