--- a/index.html
+++ b/index.html
@@ -192,10 +192,14 @@
         <br>
         <div class="row">
             <div class="col-md-6 mb-3">
-                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D707111721572450%26set%3Da.487024293581195%26type%3D3&show_text=true&width=500" width="500" height="660" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                <div class="embed-responsive embed-responsive-16by9" style="height: 660px;">
+                    <iframe class="embed-responsive-item" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D707111721572450%26set%3Da.487024293581195%26type%3D3&show_text=true" allowfullscreen></iframe>
+                </div>
             </div>
             <div class="col-md-6 mb-3">
-                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FSecondhandWonderlandYQR%2Fposts%2Fpfbid0YWs9oSyV83WWNGGmLJnQvceBwBtCcCPfvGbzZCNd6wwB11wGnk6HC3am5cN5orarl&show_text=true&width=500" width="500" height="660" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                <div class="embed-responsive embed-responsive-16by9" style="height: 660px;">
+                    <iframe class="embed-responsive-item" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FSecondhandWonderlandYQR%2Fposts%2Fpfbid0YWs9oSyV83WWNGGmLJnQvceBwBtCcCPfvGbzZCNd6wwB11wGnk6HC3am5cN5orarl&show_text=true" allowfullscreen></iframe>
+                </div>
             </div>
         </div>
         <div class="d-flex justify-content-center">
@@ -205,7 +209,8 @@
                 <a href="https://twitter.com/SHWLYQR"><img src="media/icons/twitter.png" alt="Twitter" width="40" style="margin-right: 10px;"></a>
             </div>
         </div>
-        </div>
+    </div>
+    
     
 
     <!-- FOOT -->
