fixed name of photo

--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
         <div class="col-lg-4">
             <img class="pb-1 rounded-circle" src="media/mike-jones.png" alt="Profile Photo">
             <h2 class="fw-normal">Mike Jones</h2>
-            <img class="pb-1" src="media/—Pngtree—5 star rating golden design_14236156.png" alt="5 star raiting">
+            <img class="pb-1" src="media/stars.png" alt="5 star raiting">
             <p>Great new store! Love the tools, electronics,  and vinyls! The staff are very helpful and knowledgeable. Try to make this your go to shop! It appears that most of their pricing is 50% off of brand new, or cheaper!</p>
             <p><a class="btn btn-secondary" href="https://g.co/kgs/b7JP5KQ">View details »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <img class="pb-1 rounded-circle" src="media/ben-lit.png" alt="Profile Photo">
             <h2 class="fw-normal">Benjamin Litzenberger</h2>
-            <img class="pb-1" src="media/—Pngtree—5 star rating golden design_14236156.png" alt="5 star raiting">
+            <img class="pb-1" src="media/stars.png" alt="5 star raiting">
             <p>Great store! Great staff! I've been to the other Regina second hand stores, and this is by far the nicest and most welcoming! Always a fun selection of all kinds of things for collectors, gamers, and hobbyists! They even have new products! Need a charge cord? They have them. Adaptor for your newer phone to AUX? They have those too. Even speaker wire. You won't be disappointed. Check them out as often as you can, because new products come out every day!!
             </p>
             <p><a class="btn btn-secondary" href="https://g.co/kgs/b7JP5KQ">View details »</a></p>
@@ -111,7 +111,7 @@
         <div class="col-lg-4">
             <img class="pb-1 rounded-circle" src="media/sweet-harmony.png" alt="Profile Photo">
             <h2 class="fw-normal">Sweet Harmony</h2>
-            <img class="pb-1" src="media/—Pngtree—5 star rating golden design_14236156.png" alt="5 star raiting">
+            <img class="pb-1" src="media/stars.png" alt="5 star raiting">
             <p>Friendly & helpful staff.  We were very impressed with how well everything is kept clean.  This is definitely the place to go for retro games in Regina.</p>
             <p><a class="btn btn-secondary" href="https://g.co/kgs/VVp2dYV">View details »</a></p>
         </div><!-- /.col-lg-4 -->
